# twfy-votes-django

./: .env-example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  mirror.yml  test.yml
conf/: env-example
data/: government_parties.toml
data/lookups/: agreements.yaml  cluster_centers.csv  comparison_periods.toml  government_parties.toml  legacy_divisions.json  motion_types.yaml  statement_overrides.yaml  tags.yaml
data/policies/: 1027.yml  1030.yml  1049.yml  1050.yml  1051.yml  1052.yml  1053.yml  1065.yml  1071.yml  1074.yml  1079.yml  1084.yml  1087.yml  1105.yml  1109.yml  1110.yml  1113.yml  1120.yml  1124.yml  1132.yml  1136.yml  20001.yml  20002.yml  20003.yml  20004.yml  20005.yml  20006.yml  20007.yml  20008.yml  20009.yml  20010.yml  20011.yml  20012.yml  20013.yml  20014.yml  20015.yml  20016.yml  20017.yml  20018.yml  20019.yml  (+118 more)
script/: bootstrap  checkforupdates  dev-command  lint  makemigrations  manage  migrate  populate  server  setup  test  update
src/twfy_votes/: settings.py  urls.py
src/votes/: admin.py  check_for_updates.py  consts.py  context_processors.py  models.py  urls.py
tests/: conftest.py  test_add_signatories_form.py  test_analysis_override.py  test_annotations.py  test_bulk_vote_annotation_form.py  test_commons_api.py  test_divisions.py  test_duck.py  test_free_vote_api.py  test_generation.py  test_migrations.py  test_motion_types_yaml.py  test_name_reconciliation.py  test_opengraph.py  test_person_policy_annotations.py  test_scoring.py  test_statement_form.py  test_twfy_policy_use.py  test_update_queue.py  test_visibility.py  test_votes.py  test_whip_reports.py  test_whip_reports_all_parties.py
twfy_votes/: asgi.py  notebook.py  settings.py  urls.py  wsgi.py
twfy_votes/helpers/: base_model.py  routes.py
twfy_votes/policy/: __main__.py  models.py  tools.py
votes/: admin.py  check_for_updates.py  consts.py  context_processors.py  forms.py  models.py  name_reconciliation.py  urls.py
votes/helpers/: typed_model.py
votes/markdown/: about.md  motion_types.md
votes/migrations/: 0001_initial.py  0002_alter_governmentparty_id.py  0002_remove_agreement_voting_cluster_and_more.py  0004_division_division_info_source.py  0005_policy_policygroup_remove_division_clock_time_and_more.py  0006_agreement_negative.py  0010_agreement_chamber_division_chamber_slug_and_more.py  0010_userpersonlink.py  0011_remove_policy_chamber_id_policy_chamber_and_more.py  0012_policy_partial_hash.py  0014_alter_agreement_chamber_alter_agreement_motion_and_more.py  0014_alter_agreement_id_alter_chamber_id_and_more.py  0015_divisionbreakdown_teller_against_motion_and_more.py  0015_organization_person_membership.py  0016_agreementtaglink_decisiontag_divisiontaglink_and_more.py  0016_membership_effective_party_slug.py  0017_alter_decisiontag_tag_type.py  0017_orgmembershipcount.py  0018_alter_agreement_tags_alter_division_tags_and_more.py  0018_division_total_possible_members.py  0019_decisiontag_extra_data_alter_decisiontag_tag_type.py  0019_rename_organization_membership_chamber_and_more.py  0020_governmentparty_chamber_slug_and_more.py  0020_update_error_message_update_failed.py  0021_alter_update_created_via_alter_update_date_created.py  0021_remove_division_absent_total_and_more.py  0022_alter_person_options_alter_update_created_via.py  0023_alter_motion_motion_type.py  0024_bulkapiuser.py  0024_statement_alter_agreement_chamber_slug_and_more.py  0025_alter_decisiontag_tag_type.py  0026_statement_alter_agreement_chamber_slug_and_more.py  0027_alter_whipreport_whip_priority.py  0028_statementpartybreakdown.py  0029_alter_signature_person_alter_statement_type.py
votes/models/: __init__.py  base_model.py  decisions.py  people.py
votes/policy_generation/: scoring.py
votes/populate/: __init__.py  agreements.py  basic.py  bills.py  breakdowns.py  chambers.py  cluster_analysis.py  commons_votes.py  comparison_periods.py  divisions.py  download_motions.py  export.py  export_annotations.py  export_whip_reports.py  government_parties.py  legislation_tags.py  misc_vote_analysis.py  motions.py  people.py  policy.py  policy_groups.py  policycalc.py  prep_policycalc.py  rebellions.py  register.py  signatures.py  sources.py  statement_export.py  statement_party_breakdowns.py  statement_tags.py  statements.py  tags.py  user_groups.py  (+2 more)
(+173 files in other folders)
