[tool.poetry]
name = "twfy-votes"
version = "0.1.0"
description = "Django app for storing and querying TheyWorkForYou votes"
authors = ["Alex Parsons <alex.parsons@mysociety.org>"]
packages = [
    { include = "votes", from = "src" },
    { include = "twfy_votes", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"
pydantic = "^2.8.2"
django-compressor = "^4.5.1"
django-libsass = "^0.9"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
duckdb = "^1.0.0"
httpx = "^0.27.2"
ruamel-yaml = "^0.18.6"
rich = ">=12.0.0"
jinja2 = ">=2.5,<3.0"
aioduckdb = "^0.1.0"
jinjasql = "^0.1.8"
markupsafe = "2.0.1"
tqdm = "^4.66.5"
typer = "^0.12.5"
mysoc-validator = "^0.2.1"
trogon = "^0.5.0"
django-ninja = "^1.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
pgcli = "^4.1.0"
pandas-stubs = "^2.2.2.240807"
pytest = "^8.3.2"
pytest-django = "^4.9.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "twfy_votes.settings"
filterwarnings = "ignore::DeprecationWarning"


[tool.ruff]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # line too long, sorted with formatter where it can be
    "E501", 
]


[tool.ruff.lint.isort]
known-first-party = ["hub"]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
django = ["django"]